name:                snap-plus
version:             0.1.0.0
synopsis:            A Snap library overlay.
description:         An opinionated library that re-exports (modified or expanded)
                     modules related to Snap development. If a module has a modified
                     version, and the  original module was called Snap.Foo, the overlay
                     will be named Snap.Foo.Plus. You will be expected to import it
                     rather than importing Snap.Foo. Further, certain collections of
                     helpers are in modules underneath Snap.Plus. For example,
                     Snap.Plus.Handlers.
homepage:            https://github.com/dbp/snap-plus
license:             BSD3
license-file:        LICENSE
author:              Daniel Patterson and Matt Raibert
maintainer:          dbp@dbpmail.net
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Snap.Plus
                 , Snap.Plus.Handlers
                 , Snap.Plus.Forms
                 , Snap.Plus.Paths
                 , Snap.Snaplet.PostgresqlSimple.Plus

  build-depends: base                        >= 4       && < 5
               , text                        >= 0.11    && < 1.2
               , lens                        >= 4.0     && < 4.4
               , snap                        >= 0.13    && < 0.14
               , snap-core                   >= 0.9     && < 0.10
               , snap-extras                 >= 0.9     && < 0.10
               , snaplet-postgresql-simple   >= 0.4     && < 0.6
               , digestive-functors          >= 0.7     && < 0.8
               , digestive-functors-snap     >= 0.6     && < 0.7
               , dns                         >= 1.2     && < 1.5

  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite test-snap-plus
  type: exitcode-stdio-1.0
  hs-source-dirs: spec
  main-is: Main.hs
  default-language:    Haskell2010
  build-depends: base       >= 4   && < 0.5
               , hspec2     >= 0.4 && < 0.5
               , hspec-snap >= 0.2 && < 0.3
               -- NOTE(dbp 2014-09-19): Transitive. HandsomeSoup has no restrictions on network,
               -- and API changed in 2.6 to lose Network.URI
               , network              < 2.6

  build-depends: snap-plus >= 0.1.0.0