name:                snap-plus
version:             0.2.0.1
synopsis:            A Snap library overlay.
description:         An opinionated library that re-exports (modified or expanded)
                     modules related to Snap development. If a module has a modified
                     version, and the  original module was called Snap.Foo, the overlay
                     will be named Snap.Foo.Plus. You will be expected to import it
                     rather than importing Snap.Foo. Further, certain collections of
                     helpers are in modules underneath Snap.Plus. For example,
                     Snap.Plus.Handlers.
homepage:            https://github.com/dbp/snap-plus
license:             BSD3
license-file:        LICENSE
author:              Daniel Patterson and Matt Raibert
maintainer:          dbp@dbpmail.net
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Snap.Plus
                 , Snap.Plus.Handlers
                 , Snap.Plus.Forms
                 , Snap.Plus.Paths
                 , Snap.Plus.Splices
                 , Snap.Plus.FileStore
                 , Snap.Snaplet.PostgresqlSimple.Plus

  build-depends: base                        >= 4       && < 5
               , text
               , lens                        >= 4.0
               , snap                        >= 0.13    && < 0.15
               , snap-core
               , snap-extras                 >= 0.10
               , postgresql-simple
               , snaplet-postgresql-simple   >= 0.6
               , digestive-functors          >= 0.7
               , digestive-functors-snap     >= 0.6
               , dns                         >= 1.2     && < 1.5
               , haskelldb
               , time
               , old-time
               , profunctors
               , resource-pool-catchio
               , heist
               , xmlhtml
               , directory
               , filepath
               , random
               , mtl


  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite test-snap-plus
  type: exitcode-stdio-1.0
  hs-source-dirs: spec
  main-is: Main.hs
  default-language:    Haskell2010
  build-depends: base                        >= 4      && < 5
               , hspec                      >= 2
               , hspec-snap                  >= 0.2
               , network                                  
               , bytestring
               , text
               , lens
               , snap                        >= 0.13    && < 0.15
               , dns                         >= 1.2     && < 1.5
               , containers
               , digestive-functors          >= 0.7


  build-depends: snap-plus >= 0.1.1.1
